--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,9 @@
 .DS_Store
 
 # Build output
-.app
-Surfer.app/
+*.app
 
 # Rust build cache (inside submodule)
 surfer/target/
 
-# Temporary files
-surfer_tmp/
 *.log
